@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
package "UI" <<Folder>> {
    class RegisterGreenSpaceUI {
    }
}

package "Controller" <<Folder>> {
    class RegisterGreenSpaceController {
        + RegisterGreenSpaceController(greenSpaceRepository, collaboratorRepository)
        + registerGreenSpace(type,name,area,streetName,postCodeNumber,localization)
        - getGSMFromSession()

    }
}
package "Domain" <<Folder>> {

    package "Domain.Application" <<Folder>> {
        class ApplicationSession
        {
            + static getInstance()
            + getCurrentSession()
        }

        class UserSession
        {
            + getUserEmail()
        }
    }

    package "Domain.Model" <<Folder>> {
        interface GreenSpace <<Interface>>{

            + getName()
            + getArea()
            + getAddress()

        }

        class GreenSpaces{
            + addListGreenSpaces(greenSpace)
        }

        class Garden implements GreenSpace{
            - String name
            - int area
            - Address

            + Garden(name,area,streetName,postCodeNumber,localization)
            + getName()
            + getArea()
            + getAddress()
            - validationGreenSpace()
        }

        class MediumPark implements GreenSpace{
            - String name
            - int area
            - Address

            + getName()
            + getArea()
            + getAddress()
            + MediumPark(name,area,streetName,postCodeNumber,localization)
            - validationGreenSpace()
        }

        class LargePark implements GreenSpace{
            - String name
            - int area
            - Address

            + getName()
            + getArea()
            + getAddress()
            + LargePark(name,area,streetName,postCodeNumber,localization)
            - validationGreenSpace()

        }

        interface ICollaborator <<Interface>>{
            + getName()
            + getEmail()
            + hasEmail(email)

        }

        class GreenSpaceManager implements ICollaborator{
            - String name
            - Date dateOfBirth
            - Date admissionDate
            - String email
            - int taxpayer
            + addListManagerGreenSpace(GreenSpace)

        }

        class Address {
            - String streetName
            - int doorNumber

            + Address(streetName, postCodeNumber,localization)
            - validation()
        }

        class PostCode{
            - String postCodeNumber
            - String localization

            + PostCode(postCodeNumber,localization)
            - validation()
        }
    }

    package "Domain.Repository" <<Folder>> {
        class Repositories {

            - Repositories()
            + getInstance() : Repositories
            + getGreenSpaceRepository()
            + getCollaboratorRepository()
        }

        class CollaboratorRepository {
            + getCollaboratorByEmail(email)
        }

        class GreenSpaceRepository {
            - addGreenSpace(greenSpace)
            - validationAllData(greenSpace)
            + registerGreenSpace(name,area,streetName,postCodeNumber,localization)
        }
    }

}
'-------------------Instance-------------------
Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

'-------------------UI-------------------
RegisterGreenSpaceUI ..> RegisterGreenSpaceController

'-------------------Controller-------------------
RegisterGreenSpaceController ..> Repositories : repositories
RegisterGreenSpaceController ..> ApplicationSession
RegisterGreenSpaceController ...> UserSession
RegisterGreenSpaceController ...> GreenSpaceRepository
RegisterGreenSpaceController ...> GreenSpaceManager
RegisterGreenSpaceController ...> CollaboratorRepository
RegisterGreenSpaceController ...> GreenSpace
RegisterGreenSpaceController ...> Address
RegisterGreenSpaceController ...> PostCode
RegisterGreenSpaceController ...> GreenSpaces

'-------------------ApplicationSession-------------------
ApplicationSession --> "1" UserSession : userSession

'-------------------Repositories-------------------
Repositories ---> "1" GreenSpaceRepository : GreenSpaceRepository
Repositories ---> "1" CollaboratorRepository : CollaboratorRepository

'-------------------CollaboratorRepository-------------------
CollaboratorRepository "1"  --> "*" ICollaborator : collaboratorList

'-------------------GreenSpaceRepository-------------------
GreenSpaceRepository "1" --> "*" GreenSpace : greenSpaceList

'-------------------Green Space Manager-------------------
GreenSpaceManager "1" --> "1" GreenSpaces : greenSpaces

'-------------------GreenSpace-------------------
GreenSpaces "1" -> "*" GreenSpace: greenSpaceList
GreenSpace "1" *- "1" Address : address

'-------------------Address-------------------
Address "1..*" *- "1" PostCode : postCode
ICollaborator "1..*" *---- "1" Address : address


@enduml